--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,1 +1,43 @@
 
+name: terraform
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  Terraform:
+    name: "terraform"
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.GOPI_ACCESS_KEY}}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.GOPI.SECRET_ACCESS_KEY}}
+    defaults:
+      run:
+        working-directory: terraform
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 5.49.0
+          terraform_wrapper: false
+
+      - name: Terraform init
+        run: terraform init
+
+      - name: terraform check
+        run: terraform validate
+
+      - name: Terraform Formate
+        run: terraform fmt
+
+      - name: Terraform apply
+        run: terraform apply -var-file="dev.tfvars" -auto-approve
