--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -40,4 +40,4 @@ jobs:
         run: terraform fmt
 
       - name: Terraform apply
-        run: terraform apply -var-file="dev.tfvars" -auto-approve
+        run: terraform apply -auto-approve
