--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -40,7 +40,7 @@ jobs:
         run: terraform fmt
 
       - name: Terraform plan
-        run: terraform plan -no-color
+        run: terraform plan -var-file="dev.tfvars"
         
       - name: Terraform apply
         run: terraform apply -var-file="dev.tfvars"  -auto-approve
